--- a/README.rdoc
+++ b/README.rdoc
@@ -22,6 +22,13 @@ Accepts an array of character pieces
     [["ㅇ", "ㅣ", "ㄺ"], ["ㅇ", "ㅓ"], ["ㅅ", "ㅣ", "ㅍ"]].join_ko
     => '읽어싶'
 
+== Publish
+
+$ gem build korean-string.gemspec
+
+$ gem push --key github \
+--host https://rubygems.pkg.github.com/daangn \
+korean-string-0.1.0.gem
 
 == Todo
 
